--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -20,7 +20,7 @@
 }
 
 .infoCardContainer--vintage {
-    background-color: #EDCFD1
+    background-color: #EDCFD1;
 }
 
 .infoCardContainer--max-width {
@@ -39,5 +39,5 @@
 }
 
 .infoCardContainer--metal {
-    background-color: #E1E1E1
+    background-color: #E1E1E1;
 }
