--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -16,7 +16,7 @@
 
 .infoCardCallActionContainer :global(.vtex-button):hover {
     color: gray;
-    background-color: blue;
+    background-color: white;
     border: transparent;
 }
 
@@ -24,7 +24,6 @@
     max-width: 1260px;
     margin: 0 auto;
     padding: 0;
-    
 }
 
 .infoCardContainer :hover {
